# song-hog

./: .gitignore  CLAUDE.md  Dockerfile  PLAN.MD  README.md  api.py  api_test.py  audio_process.py  auth.py  colors.py  debug_plot.py  file_converter.py  file_loader.py  file_manager.py  logging_config.py  main.py  plot.py  process.py  pyproject.toml  wav_parser.py
.github/workflows/: test.yml
file_loader/: __init__.py  _config.py  _validation.py  downloader.py
static/: index.html
tests/: test_api.py  test_downloader.py  test_file_manager.py  test_process.py  test_validation.py
